--- a/frontend/src/components/RecipeCard/RecipeCard.module.scss
+++ b/frontend/src/components/RecipeCard/RecipeCard.module.scss
@@ -19,6 +19,10 @@
         top: 70px;
     }
 
+    &:hover .threeLinesName {
+        top: 100px;
+    }
+
     &:hover .weekplanBoxToday {
         background-color: var(--green-dark);
     }
@@ -61,9 +65,9 @@
 .discriptionFood {
     padding: 10px;
     transition: top 0.8s ease-in-out;
-    // bottom: 10px;
     top: calc(100% - 30px);
     position: absolute;
+    width: 100%;
 }
 
 .discriptionHover {
@@ -72,6 +76,6 @@
     pointer-events: none;
     transition: opacity 0.6s ease-in-out;
     position: absolute;
-    margin-top: 0px;
+    margin-top: 25px;
     width: 240px;
 }
