--- a/frontend/src/styles/WeekOverview.module.scss
+++ b/frontend/src/styles/WeekOverview.module.scss
@@ -14,6 +14,7 @@
         line-height: 100px;
         padding-right: 0px;
         transform: rotate(180deg);
+        margin-top: 80px;
     }
 
     h4 {
