--- a/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
+++ b/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
@@ -10,7 +10,6 @@
     display: block;
     flex-direction: column;
     align-items: left;
-    margin-right: 100px;
     width: 100%;
 
     .choiceWrapper {
@@ -54,7 +53,7 @@
 
     label {
         display: flex;
-        justify-content: center;
+        justify-content: left;
         align-items: center;
         border: 2px solid var(--gray-dark);
         border-radius: 50px;
@@ -64,9 +63,8 @@
         /* 18px */
         line-height: 1.75rem;
         /* 28px */
-        text-transform: capitalize;
         // color: var(--gray-dark);
-        padding-left: 3rem;
+        padding-left: 2rem;
     }
 
     input[type='radio']:checked + label,
