--- a/frontend/src/components/Intolerances/Intolerances.module.scss
+++ b/frontend/src/components/Intolerances/Intolerances.module.scss
@@ -1,6 +1,6 @@
 .intoleranceWrapper .containerField {
-    display: block;
-    width: 150px;
+    // display: block;
+    width: 100%;
     height: 70px;
     position: relative;
     border-radius: 50px;
