--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -1,110 +1,121 @@
 @import "@styles/variables.scss";
 
-
-
-.container {
-    margin-inline: auto;
-    display: flex;
-    justify-content: space-between;
-    margin: 1.5rem;
-    margin-top: 3.5rem;
-    margin-bottom: 0;
-    background-color: var(--green-light);
-    height: 75px;
-    border-radius: $border-radius-full;
-
-    p {
-        font-size: 15px;
+.headerContainer {
+    width: 100%;
+    padding: 3.5rem;
+    padding-top: 1.5rem;
+    padding-bottom: 0;
+    position: fixed;
+    z-index: 2;
+    
+}
+    .scroll {
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     }
 
 
-    h4 {
+    .container {
+        transition: box-shadow 0.3s ease-in-out;
+        margin-inline: auto;
+        display: flex;
+        justify-content: space-between;
+        background-color: var(--green-light);
+        height: 75px;
+        border-radius: $border-radius-full;
+    
+        p {
+            font-size: 15px;
+        }
+    
+    
+        h4 {
+            margin-top: -30px;
+        }
+    }
+    
+    .secondTitle {
         margin-top: -30px;
+        margin-bottom: 20px;
     }
-}
-
-.secondTitle {
-    margin-top: -30px;
-    margin-bottom: 20px;
-}
-
-.navIcon {
-    width: 60px;
-    height: 45px;
-    position: relative;
-    z-index: 9999;
-    margin: 50px auto;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: 0.5s ease-in-out;
-    -moz-transition: 0.5s ease-in-out;
-    -o-transition: 0.5s ease-in-out;
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
-
-    span {
-        display: block;
-        position: absolute;
-        height: 9px;
-        width: 100%;
-        background: var(--gray-light);
-        border-radius: 9px;
-        opacity: 1;
-        left: 0;
+    
+    .navIcon {
+        width: 60px;
+        height: 45px;
+        position: relative;
+        z-index: 9999;
+        margin: 50px auto;
         -webkit-transform: rotate(0deg);
         -moz-transform: rotate(0deg);
         -o-transform: rotate(0deg);
         transform: rotate(0deg);
-        -webkit-transition: 0.25s ease-in-out;
-        -moz-transition: 0.25s ease-in-out;
-        -o-transition: 0.25s ease-in-out;
-        transition: 0.25s ease-in-out;
-    }
-}
-
-.navIcon {
-    span {
-        &:nth-child(1) {
-            top: 0px;
-            -webkit-transform-origin: left center;
-            -moz-transform-origin: left center;
-            -o-transform-origin: left center;
-            transform-origin: left center;
-        }
-
-        &:nth-child(2) {
-            top: 18px;
-        }
-
-        &:nth-child(3) {
-            top: 36px;
-            -webkit-transform-origin: left center;
-            -moz-transform-origin: left center;
-            -o-transform-origin: left center;
-            transform-origin: left center;
+        -webkit-transition: 0.5s ease-in-out;
+        -moz-transition: 0.5s ease-in-out;
+        -o-transition: 0.5s ease-in-out;
+        transition: 0.5s ease-in-out;
+        cursor: pointer;
+    
+        span {
+            display: block;
+            position: absolute;
+            height: 9px;
+            width: 100%;
+            background: var(--gray-light);
+            border-radius: 9px;
+            opacity: 1;
+            left: 0;
+            -webkit-transform: rotate(0deg);
+            -moz-transform: rotate(0deg);
+            -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+            -webkit-transition: 0.25s ease-in-out;
+            -moz-transition: 0.25s ease-in-out;
+            -o-transition: 0.25s ease-in-out;
+            transition: 0.25s ease-in-out;
         }
     }
-}
-
-.open {
-    span {
-        &:nth-child(1) {
-            transform: rotate(45deg);
-            top: -3px;
-            left: 8px;
-        }
-
-        &:nth-child(2) {
-            width: 0%;
-            opacity: 0;
-        }
-
-        &:nth-child(3) {
-            transform: rotate(-45deg);
-            top: 39px;
-            left: 8px;
+    
+    .navIcon {
+        span {
+            &:nth-child(1) {
+                top: 0px;
+                -webkit-transform-origin: left center;
+                -moz-transform-origin: left center;
+                -o-transform-origin: left center;
+                transform-origin: left center;
+            }
+    
+            &:nth-child(2) {
+                top: 18px;
+            }
+    
+            &:nth-child(3) {
+                top: 36px;
+                -webkit-transform-origin: left center;
+                -moz-transform-origin: left center;
+                -o-transform-origin: left center;
+                transform-origin: left center;
+            }
         }
     }
-}
+    
+    .open {
+        span {
+            &:nth-child(1) {
+                transform: rotate(45deg);
+                top: -3px;
+                left: 8px;
+            }
+    
+            &:nth-child(2) {
+                width: 0%;
+                opacity: 0;
+            }
+    
+            &:nth-child(3) {
+                transform: rotate(-45deg);
+                top: 39px;
+                left: 8px;
+            }
+        }
+    }
+
