--- a/frontend/src/components/Dislikes/Dislikes.module.scss
+++ b/frontend/src/components/Dislikes/Dislikes.module.scss
@@ -1,13 +1,20 @@
 .dislikeWrapper {
     span {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        width: 200px;
-        height: 70px;
+        display: inline-block;
+        height: 50px;
         border: solid;
         border-radius: 50px;
         border: 2px solid var(--green-dark);
         background-color: var(--green-light);
+        padding: 10px;
+        overflow: hidden;
+        white-space: nowrap;
+        width: max-content;
+
+        label {
+            align-items: center;
+        }
     }
 }
+
+// grid-cols-1 my-4 gap-y-1 md:gap-y-2 md:grid-cols-1 lg:gap-y-4 lg:grid-cols-2 xl:gap-y-8 xl:grid-cols-3 2xl:gap-y-8 2xl:grid-cols-4
