FEAT: add breakpoints for headings and p

--- a/frontend/src/styles/_font.scss
+++ b/frontend/src/styles/_font.scss
@@ -1,40 +1,35 @@
 @import '@styles/mixins.scss';
 
-$fs-h1: 32px;
-$fs-h2: 28px;
-$fs-h3: 18px;
-$fs-h4: 17px;
-$fs-h5: 16px;
-$fs-p: 16px;
-
 .h1 {
-    font-family: var(--font-bebas);
-    font-size: $fs-h1;
+    font-family: var(--font-bebas), sans-serif;
+    font-size: 1.5rem; /* 24px */
+    font-weight: 700;
+    line-height: 1.5;
     color: var(--black);
 
     @include respond-to('sm') {
-        font-size: 1.5rem;
-        line-height: 1.2;
+        font-size: 1.75rem; /* 28px */
+        line-height: 1.4;
     }
 
     @include respond-to('md') {
-        font-size: 2rem;
+        font-size: 2rem; /* 32px */
         line-height: 1.3;
     }
 
     @include respond-to('lg') {
-        font-size: 3rem;
-        line-height: 1.4;
+        font-size: 2.5rem; /* 40px */
+        line-height: 1.2;
     }
 
     @include respond-to('xl') {
-        font-size: 4rem;
-        line-height: 1.5;
+        font-size: 3rem; /* 48px */
+        line-height: 1.1;
     }
 
     @include respond-to('2xl') {
-        font-size: 5rem;
-        line-height: 1.6;
+        font-size: 3.5rem; /* 56px */
+        line-height: 1;
     }
 }
 
@@ -48,33 +43,35 @@ h1 {
 }
 
 .h2 {
-    font-family: var(--font-bebas);
-    font-size: $fs-h2;
+    font-family: var(--font-bebas), sans-serif;
+    font-size: 1.25rem; /* 20px */
+    font-weight: 700;
+    line-height: 1.5;
     color: var(--black);
 
     @include respond-to('sm') {
-        font-size: 1.25rem;
-        line-height: 1.2;
+        font-size: 1.5rem; /* 24px */
+        line-height: 1.4;
     }
 
     @include respond-to('md') {
-        font-size: 1.5rem;
+        font-size: 1.75rem; /* 28px */
         line-height: 1.3;
     }
 
     @include respond-to('lg') {
-        font-size: 2rem;
-        line-height: 1.4;
+        font-size: 2rem; /* 32px */
+        line-height: 1.2;
     }
 
     @include respond-to('xl') {
-        font-size: 2.5rem;
-        line-height: 1.5;
+        font-size: 2.25rem; /* 36px */
+        line-height: 1.1;
     }
 
     @include respond-to('2xl') {
-        font-size: 3rem;
-        line-height: 1.6;
+        font-size: 2.5rem; /* 40px */
+        line-height: 1;
     }
 }
 
@@ -88,34 +85,35 @@ h2 {
 }
 
 .h3 {
-    font-family: var(--font-bebas);
-    font-size: $fs-h3;
-    line-height: $lh-h3;
+    font-family: var(--font-bebas), sans-serif;
+    font-size: 1.125rem; /* 18px */
+    font-weight: 700;
+    line-height: 1.5;
     color: var(--black);
 
     @include respond-to('sm') {
-        font-size: $fs-h3 * $scale-fs-sm;
-        line-height: $lh-h3 * $scale-lh-sm;
+        font-size: 1.25rem; /* 20px */
+        line-height: 1.4;
     }
 
     @include respond-to('md') {
-        font-size: $fs-h3 * $scale-fs-md;
-        line-height: $lh-h3 * $scale-lh-md;
+        font-size: 1.5rem; /* 24px */
+        line-height: 1.3;
     }
 
     @include respond-to('lg') {
-        font-size: $fs-h3 * $scale-fs-lg;
-        line-height: $lh-h3 * $scale-lh-lg;
+        font-size: 1.75rem; /* 28px */
+        line-height: 1.2;
     }
 
     @include respond-to('xl') {
-        font-size: $fs-h3 * $scale-fs-xl;
-        line-height: $lh-h3 * $scale-lh-xl;
+        font-size: 2rem; /* 32px */
+        line-height: 1.1;
     }
 
     @include respond-to('2xl') {
-        font-size: $fs-h3 * $scale-fs-2xl;
-        line-height: $lh-h3 * $scale-lh-2xl;
+        font-size: 2.25rem; /* 36px */
+        line-height: 1;
     }
 }
 
@@ -129,35 +127,45 @@ h3 {
 }
 
 .h4 {
-    font-family: var(--font-bebas);
-    font-size: $fs-h4;
-    line-height: $lh-h4;
+    font-family: var(--font-bebas), sans-serif;
+    font-size: 1rem; /* 16px */
+    font-weight: 700;
+    line-height: 1.5;
     color: var(--black);
 
     @include respond-to('sm') {
-        font-size: $fs-h4 * $scale-fs-sm;
-        line-height: $lh-h4 * $scale-lh-sm;
+        font-size: 1.125rem; /* 18px */
+        line-height: 1.4;
     }
 
     @include respond-to('md') {
-        font-size: $fs-h4 * $scale-fs-md;
-        line-height: $lh-h4 * $scale-lh-md;
+        font-size: 1.25rem; /* 20px */
+        line-height: 1.3;
     }
 
     @include respond-to('lg') {
-        font-size: $fs-h4 * $scale-fs-lg;
-        line-height: $lh-h4 * $scale-lh-lg;
+        font-size: 1.5rem; /* 24px */
+        line-height: 1.2;
     }
 
     @include respond-to('xl') {
-        font-size: $fs-h4 * $scale-fs-xl;
-        line-height: $lh-h4 * $scale-lh-xl;
+        font-size: 1.75rem; /* 28px */
+        line-height: 1.1;
     }
 
     @include respond-to('2xl') {
-        font-size: $fs-h4 * $scale-fs-2xl;
-        line-height: $lh-h4 * $scale-lh-2xl;
+        font-size: 2rem; /* 32px */
+        line-height: 1;
     }
+}
+
+.h4-white {
+    @extend .h4;
+    color: var(--white);
+}
+
+h4 {
+    @extend .h4;
 }
 
 .h4-white {
@@ -170,75 +178,87 @@ h4 {
 }
 
 .h5 {
-    font-family: var(--font-bebas);
-    font-size: $fs-h4;
-    line-height: $lh-h4;
+    font-family: var(--font-bebas), sans-serif;
+    font-size: 1rem; /* 16px */
+    font-weight: 700;
+    line-height: 1.5;
     color: var(--black);
 
     @include respond-to('sm') {
-        font-size: $fs-h5 * $scale-fs-sm;
-        line-height: $lh-h5 * $scale-lh-sm;
+        // font-size: 1.125rem; /* 18px */
+        font-size: 1.1rem; /* 18px */
+        line-height: 1.4;
     }
 
     @include respond-to('md') {
-        font-size: $fs-h5 * $scale-fs-md;
-        line-height: $lh-h5 * $scale-lh-md;
+        // font-size: 1.25rem; /* 20px */
+        font-size: 1.125rem; /* 20px */
+        line-height: 1.3;
     }
 
     @include respond-to('lg') {
-        font-size: $fs-h5 * $scale-fs-lg;
-        line-height: $lh-h5 * $scale-lh-lg;
+        // font-size: 1.5rem; /* 24px */
+        font-size: 1.4rem; /* 24px */
+        line-height: 1.2;
     }
 
     @include respond-to('xl') {
-        font-size: $fs-h5 * $scale-fs-xl;
-        line-height: $lh-h5 * $scale-lh-xl;
+        // font-size: 1.75rem; /* 28px */
+        font-size: 1.6rem; /* 28px */
+        line-height: 1.1;
     }
 
     @include respond-to('2xl') {
-        font-size: $fs-h5 * $scale-fs-2xl;
-        line-height: $lh-h5 * $scale-lh-2xl;
+        // font-size: 2rem; /* 32px */
+        font-size: 1.8rem; /* 32px */
+        line-height: 1;
     }
 }
 
-.h4-white {
-    @extend .h4;
-    color: var(--white);
-}
-
-h4 {
-    @extend .h4;
+h5 {
+    @extend .h5;
 }
 
 .p {
-    font-family: var(--font-inter);
-    font-size: $fs-p;
-    line-height: $lh-p;
+    font-family: var(--font-inter), sans-serif;
+    font-weight: 400;
+    font-size: 1rem; /* 16px */
+    line-height: 1.5;
 
-    @include respond-to('sm') {
-        font-size: $fs-p * $scale-fs-sm;
-        line-height: $lh-p * $scale-lh-sm;
-    }
+    // @include respond-to('sm') {
+    //     // font-size: 1.125rem; /* 18px */
+    //     // line-height: 1.4;
+    //     font-size: 1rem; /* 16px */
+    //     line-height: 1.5;
+    // }
 
-    @include respond-to('md') {
-        font-size: $fs-p * $scale-fs-md;
-        line-height: $lh-p * $scale-lh-md;
-    }
+    // @include respond-to('md') {
+    //     // font-size: 1.25rem; /* 20px */
+    //     // line-height: 1.3;
+    //     font-size: 1rem; /* 16px */
+    //     line-height: 1.5;
+    // }
 
-    @include respond-to('lg') {
-        font-size: $fs-p * $scale-fs-lg;
-        line-height: $lh-p * $scale-lh-lg;
-    }
+    // @include respond-to('lg') {
+    //     // font-size: 1.5rem; /* 24px */
+    //     // line-height: 1.2;
+    //     font-size: 1rem; /* 16px */
+    //     line-height: 1.5;
+    // }
 
-    @include respond-to('xl') {
-        font-size: $fs-p * $scale-fs-xl;
-        line-height: $lh-p * $scale-lh-xl;
-    }
+    // @include respond-to('xl') {
+    //     // font-size: 1.75rem; /* 28px */
+    //     // line-height: 1.1;
+    //     font-size: 1rem; /* 16px */
+    //     line-height: 1.5;
+    // }
 
-    @include respond-to('2xl') {
-        font-size: $fs-p * $scale-fs-2xl;
-        line-height: $lh-p * $scale-lh-2xl;
-    }
+    // @include respond-to('2xl') {
+    //     // font-size: 2rem; /* 32px */
+    //     // line-height: 1;
+    //     font-size: 1rem; /* 16px */
+    //     line-height: 1.5;
+    // }
 }
 
 .p-white {
