--- a/frontend/src/components/RecipeCard/RecipeCard.module.scss
+++ b/frontend/src/components/RecipeCard/RecipeCard.module.scss
@@ -91,9 +91,8 @@
 
 .heartIcon {
     opacity: 0;
-    transition: opacity 0.6s ease-in-out;
     position: absolute;
-    transition: top 0.8s ease-in-out;
+    transition: all 0.8s ease-in-out;
     top: calc(100% - 10px);
     width: 100%;
     fill: none;
