--- a/frontend/src/components/Footer/Footer.module.scss
+++ b/frontend/src/components/Footer/Footer.module.scss
@@ -1,14 +1,13 @@
-@import "@styles/variables.scss";
+@import '@styles/variables.scss';
 
 .container {
-    margin-top: -60px;
+    margin-top: 50px;
 }
 
 .footerContainer {
     background-color: var(--green-light);
     margin-top: -1px;
     padding: 60px;
-
 
     h3 {
         margin-top: -38px;
