fix: rewrite with clamp, extract into separate file

--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -4,6 +4,7 @@
 
 @import '@styles/variables.scss';
 @import '@styles/transitions.scss';
+@import '@styles/text.scss';
 
 :root {
     --green-light-rgb: rgb(214, 229, 227);
@@ -29,199 +30,6 @@
 
 body {
     position: relative;
-}
-
-.h1 {
-    @apply text-4xl leading-tight mb-4;
-    font-family: var(--font-bebas);
-    color: var(--black);
-
-    @screen sm {
-        @apply text-5xl leading-tight sm:mb-5;
-    }
-
-    @screen md {
-        @apply text-6xl leading-tight md:mb-6;
-    }
-
-    @screen lg {
-        @apply text-7xl leading-tight lg:mb-7;
-    }
-
-    @screen xl {
-        @apply text-8xl leading-tight xl:mb-8;
-    }
-}
-
-h1 {
-    @extend .h1;
-}
-
-.h1-green {
-    @extend .h1;
-    color: var(--green-dark);
-}
-
-.h2 {
-    @apply text-3xl leading-tight mb-4;
-    font-family: var(--font-bebas);
-    color: var(--black);
-
-    @screen sm {
-        @apply text-4xl leading-tight sm:mb-5;
-    }
-
-    @screen md {
-        @apply text-5xl leading-tight md:mb-6;
-    }
-
-    @screen lg {
-        @apply text-6xl leading-tight lg:mb-7;
-    }
-
-    @screen xl {
-        @apply text-7xl leading-tight xl:mb-8;
-    }
-}
-
-h2 {
-    @extend .h2;
-}
-
-.h2-white {
-    @extend .h2;
-    color: var(--white);
-}
-
-.h2-zeyada-green {
-    @extend .h2;
-    font-family: var(--font-zeyada);
-    color: var(--green-dark);
-}
-
-.h3 {
-    @apply text-2xl leading-tight mb-4;
-    font-family: var(--font-bebas);
-    color: var(--black);
-
-    @screen sm {
-        @apply text-3xl leading-tight sm:mb-5;
-    }
-
-    @screen md {
-        @apply text-4xl leading-tight md:mb-6;
-    }
-
-    @screen lg {
-        @apply text-5xl leading-tight lg:mb-7;
-    }
-
-    @screen xl {
-        @apply text-6xl leading-tight xl:mb-8;
-    }
-}
-
-h3 {
-    @extend .h3;
-}
-
-.h3-green-dark {
-    @extend .h3;
-    color: var(--green-dark);
-}
-
-.h4 {
-    @apply text-xl leading-tight mb-4;
-    font-family: var(--font-bebas);
-    color: var(--black);
-
-    @screen sm {
-        @apply text-2xl leading-tight sm:mb-5;
-    }
-
-    @screen md {
-        @apply text-3xl leading-tight md:mb-6;
-    }
-
-    @screen lg {
-        @apply text-4xl leading-tight lg:mb-7;
-    }
-
-    @screen xl {
-        @apply text-5xl leading-tight xl:mb-8;
-    }
-}
-
-.h4 {
-    @extend .h4;
-}
-
-.h4-green-dark {
-    @extend .h4;
-    color: var(--green-dark);
-}
-
-.h5 {
-    @apply text-lg leading-tight mb-4;
-    font-family: var(--font-bebas);
-    color: var(--black);
-
-    @screen sm {
-        @apply text-xl leading-tight sm:mb-5;
-    }
-
-    @screen md {
-        @apply text-2xl leading-tight md:mb-6;
-    }
-
-    @screen lg {
-        @apply text-3xl leading-tight lg:mb-7;
-    }
-
-    @screen xl {
-        @apply text-4xl leading-tight xl:mb-8;
-    }
-}
-
-.h5 {
-    @extend .h5;
-}
-
-.h5-green-dark {
-    @extend .h5;
-    color: var(--green-dark);
-}
-
-.p {
-    @apply text-base leading-relaxed;
-    font-family: var(--font-inter);
-    color: var(--black);
-
-    @screen sm {
-        @apply text-lg leading-relaxed;
-    }
-
-    @screen md {
-        @apply text-xl leading-relaxed;
-    }
-
-    @screen lg {
-        @apply text-2xl leading-relaxed;
-    }
-
-    @screen xl {
-        @apply text-3xl leading-relaxed;
-    }
-}
-
-p {
-    @extend .p;
-}
-
-.p-white {
-    @extend .p;
-    font-size: 16px;
-    color: var(--white);
 }
 
 .text-input-wrapper {
