--- a/frontend/src/components/SignUp/Login/Login.module.scss
+++ b/frontend/src/components/SignUp/Login/Login.module.scss
@@ -1,13 +1,24 @@
 .loginContainer {
     position: absolute;
     top: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     height: 100%;
     opacity: 0;
     transition: all 0.6s ease-in-out;
     left: 0;
-    width: 50%;
+    width: 100%;
     z-index: 2;
     transform: translateX(100%);
+
+    @screen lg {
+        display: block;
+        width: 50%;
+    }
+
     &.active {
         opacity: 1;
         transform: translateX(0%);
