--- a/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
+++ b/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
@@ -13,7 +13,8 @@
     width: 100%;
 
     .choiceWrapper {
-        display: block;
+        display: grid;
+        grid-template-columns: repeat(5, minmax(0, 1fr));
         margin-bottom: 1.5rem;
         width: 100%;
         height: 80px;
