--- a/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
+++ b/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
@@ -7,17 +7,16 @@
 }
 
 .preferencesWrapper {
-    display: block;
+    display: grid;
     flex-direction: column;
     align-items: left;
     width: 100%;
 
     .choiceWrapper {
         display: grid;
-        grid-template-columns: repeat(5, minmax(0, 1fr));
-        margin-bottom: 1.5rem;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
         width: 100%;
-        height: 80px;
+        // height: 60px;
         position: relative;
 
         &:last-child {
