--- a/frontend/src/components/SignUp/Register/Register.module.scss
+++ b/frontend/src/components/SignUp/Register/Register.module.scss
@@ -3,10 +3,14 @@
     width: 50%;
     opacity: 0;
     z-index: 1;
-    position: absolute;
     top: 0;
     height: 100%;
     transition: all 0.6s ease-in-out;
+
+    @screen lg {
+        position: absolute;
+    }
+
     &.active {
         transform: translateX(100%);
         opacity: 1;
