--- a/frontend/src/components/SignUp/Register/Register.module.scss
+++ b/frontend/src/components/SignUp/Register/Register.module.scss
@@ -1,21 +1,25 @@
 .registerContainer {
-    left: 0;
-    width: 50%;
+    width: 100%;
     opacity: 0;
     z-index: 1;
-    top: 0;
     height: 100%;
     transition: all 0.6s ease-in-out;
 
     @screen lg {
+        top: 0;
+        left: 0;
         position: absolute;
+        width: 50%;
     }
 
     &.active {
-        transform: translateX(100%);
         opacity: 1;
         z-index: 5;
         animation: show 0.6s;
+
+        @screen lg {
+            transform: translateX(100%);
+        }
     }
 }
 
