--- a/frontend/src/styles/Preferences.module.scss
+++ b/frontend/src/styles/Preferences.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     width: 110%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .preferencesWrapper {
