--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -100,6 +100,18 @@ input[type='submit'] {
     background-color: inherit;
 }
 
+.btn-tertiary {
+    @extend .btn;
+    color: var(--green-dark);
+    padding: 0;
+    font-weight: bold;
+
+    &:hover {
+        color: var(--green-semi);
+        background-color: unset;
+    }
+}
+
 .swiper {
     padding-bottom: 35px !important;
 
