--- a/frontend/src/components/Layout/Layout.module.scss
+++ b/frontend/src/components/Layout/Layout.module.scss
@@ -1,5 +1,11 @@
 .mainContainer {
-    padding: 3.5rem;
+    padding: 1.5rem;
     min-height: 100vh;
     display: flex;
+    overflow-x: hidden;
+
+    @screen lg {
+        padding: 3.5rem;
+
+    }
 }
