--- a/frontend/src/styles/Home.module.scss
+++ b/frontend/src/styles/Home.module.scss
@@ -1,3 +1,24 @@
+.home {
+    width: 100%;
+    max-width: 1600px;
+        margin-left: auto;
+        margin-right: auto; 
+           .explainWrapper {
+        // background-image: url('/Landingpage/FoodItems/Kaese.svg');
+        // background-size: 100%;
+        // background-repeat: no-repeat;
+        // background-position: 100%;
+        height: 60vh;
+        width: 100%;
+
+
+        @screen lg {
+            height: 80vh;
+        }
+    }
+}
+
+
 .line {
     position: relative;
     width: 24em;
