--- a/frontend/src/styles/DetailRecipe.module.scss
+++ b/frontend/src/styles/DetailRecipe.module.scss
@@ -1,5 +1,4 @@
-@import "@styles/variables.scss";
-
+@import '@styles/variables.scss';
 
 .container {
     margin-inline: auto;
@@ -19,29 +18,21 @@
     color: var(--green-dark);
 }
 
-.foodImg {
-    width: 90%;
-    height: 550px;
-    object-fit: cover;
-    border-radius: $boder-radius;
-    position: absolute;
-}
-
 .checkbox {
     margin-right: 10px;
 
-    &+label {
+    & + label {
         font-size: 20px;
     }
 
     // Hover
-    &+label:hover {
+    & + label:hover {
         color: var(--green-dark-rgb);
     }
 
     // Checked
     &:checked {
-        &+label {
+        & + label {
             &:before {
                 background: red;
                 box-shadow: none;
@@ -58,7 +49,6 @@
     margin: 5px;
 
     path {
-
         &:hover {
             fill: rebeccapurple;
         }
@@ -66,13 +56,20 @@
 }
 
 .gradientBox {
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 60%, var(--green-light) 90%);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+
+    display: flex;
+    align-items: end;
+
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 60%, var(--green-light) 90%);
     width: 100%;
-    height: 550px;
-    border-radius: $boder-radius;
-    margin-inline: auto;
-    margin-top: 10px;
-    z-index: 5px;
-    position: relative;
-    overflow: hidden;
+    height: auto;
+    max-height: 400px;
+    overflow-y: hidden;
+
+    @screen lg {
+        background: linear-gradient(90deg, rgba(255, 255, 255, 0) 60%, var(--green-light) 90%);
+    }
 }
