--- a/frontend/src/styles/Home.module.scss
+++ b/frontend/src/styles/Home.module.scss
@@ -3,11 +3,13 @@
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
+    padding: 1.5rem;
+
+    @screen lg {
+        padding: 3.5rem;
+    }
+
     .explainWrapper {
-        // background-image: url('/Landingpage/FoodItems/Kaese.svg');
-        // background-size: 100%;
-        // background-repeat: no-repeat;
-        // background-position: 100%;
         height: 60vh;
         width: 100%;
 
