--- a/frontend/src/components/FormInputs/Checkbox.module.scss
+++ b/frontend/src/components/FormInputs/Checkbox.module.scss
@@ -1,65 +1,64 @@
-.checkboxContainer {
-    input {
-        position: absolute;
-        opacity: 0;
-        height: 0;
-        width: 0;
+.formControl {
+    display: flex;
+    align-items: center;
 
-        &:checked + label::after {
-            opacity: 1;
-        }
+    font-family: system-ui, sans-serif;
+    font-size: 2rem;
+    font-weight: bold;
+    line-height: 1.1;
 
-        &:checked + label::before {
-            background-color: var(--green-dark);
-        }
+    &:hover {
+        cursor: pointer;
     }
 
-    label {
-        position: relative;
-        display: block;
-        font-family: var(--font-inter);
-        font-size: 1.25rem; /* 20px */
-        line-height: 1.75rem; /* 28px */
-        font-style: normal;
-        width: fit-content;
-        padding-left: 2.75rem;
-        cursor: pointer;
+    input[type='checkbox'] {
+        display: grid;
+        place-content: center;
+
+        /* Add if not using autoprefixer */
+        -webkit-appearance: none;
+        appearance: none;
+        /* For iOS < 15 to remove gradient background */
+        background-color: #fff;
+        /* Not removed via appearance */
+        margin: 0;
+
+        width: 30px;
+        height: 30px;
+        border: 4px solid var(--green-dark-rgb);
+        border-radius: 5px;
+        transform: translateY(-0.075em);
+        transition: 120ms background-color ease-in-out;
+
+        margin-right: 1rem;
+
+        &:hover {
+            cursor: pointer;
+        }
 
         &::before {
             content: '';
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            left: 0;
-            display: block;
-            width: 25px;
-            height: 25px;
+            width: 0.65em;
+            height: 0.65em;
+            transform: scale(0);
+            transition: 120ms transform ease-in-out;
+            box-shadow: inset 1em 1em var(--form-control-color);
             background-color: var(--white);
-            border: 3px solid var(--green-dark);
-            border-radius: 5px;
 
-            &::before {
-                background-color: var(--green-light);
-            }
+            transform-origin: bottom left;
+            clip-path: polygon(13% 40%, 0 61%, 46% 96%, 96% 12%, 76% 0%, 39% 58%);
         }
 
-        &:hover {
+        &:checked {
             &::before {
-                background-color: var(--green-light);
+                transform: scale(1);
             }
-        }
 
-        &::after {
-            content: '';
-            position: absolute;
-            left: 9px;
-            top: 5px;
-            width: 8px;
-            height: 15px;
-            border: solid var(--white);
-            border-width: 0 3px 3px 0;
-            transform: rotate(45deg);
-            opacity: 0;
+            & {
+                background-color: var(--green-dark-rgb);
+            }
+
+            // background-color: red;
         }
     }
 }
