--- a/frontend/src/components/RecipeCard/RecipeCard.module.scss
+++ b/frontend/src/components/RecipeCard/RecipeCard.module.scss
@@ -1,7 +1,12 @@
 @import '@styles/variables.scss';
 
 .wrapperContainer {
-    @screen lg {
+    position: relative;
+    width: 100%;
+    height: 225px;
+    @screen sm {
+        width: 160px;
+
         &:hover .foodImg {
             opacity: 0.1;
         }
@@ -14,7 +19,7 @@
         &:hover .heartIcon {
             opacity: 1;
             cursor: pointer;
-            top: 140px;
+            top: 10px;
         }
 
         &:hover .discriptionFood {
@@ -37,12 +42,17 @@
             background-color: var(--green-dark);
         }
     }
+
+    @screen lg {
+        width: 250px;
+        height: 350px;
+    }
 }
 
 .weekplanBox {
     background: linear-gradient(rgba(255, 255, 255, 0) 60%, var(--green-light) 90%);
-    width: 160px;
-    height: 225px;
+    width: 100%;
+    height: 100%;
     border-radius: $boder-radius;
     margin-inline: auto;
     margin-top: 10px;
@@ -51,11 +61,6 @@
     overflow: hidden;
     margin-left: 0;
     margin-right: 0;
-
-    @screen lg {
-        width: 250px;
-        height: 350px;
-    }
 }
 
 .weekplanBoxToday {
@@ -64,15 +69,10 @@
 }
 
 .foodBox {
-    width: 160px;
-    height: 225px;
+    width: 100%;
+    height: 100%;
     border-radius: $boder-radius;
     position: absolute;
-
-    @screen lg {
-        width: 250px;
-        height: 350px;
-    }
 }
 
 .foodImg {
